<resources>
    <string name="app_name">Icare</string>
    <string name="splash_logo">Splash Screen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="become_a_partner">Become a Partner</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="Restaurant">Gym</string>
    <string name="update">Update</string>
    <string name="nutrients">Nutrients</string>
    <string name="fill_the_required_information">Fill the required information</string>
    <string name="country">Country</string>
    <string name="myinfolabel">My Information</string>
    <string name="city">City</string>
    <string name="gym_type">Gym Type</string>
    <string name="upload_gym_license">Upload Gym License</string>
    <string name="upload_nutrients_license">Upload Nutrients License</string>
    <string name="signup">Signup</string>
    <string name="location">Location</string>
    <string name="center_name">Center Name</string>
    <string name="time">Open Until 9am </string>
    <string name="gym_name">Gym Name</string>
    <string name="nutrients_name">Nutrients Name</string>
    <string name="experience">Experience</string>
    <string name="upload_center_license">Upload Center License</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="send">Send Report</string>
    <string name="reporting">Report A User</string>
    <string name="picktime">Pick Time</string>
    <string name="Available">Available Time</string>
    <string name="muinfo">MY Information</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="next">Next</string>
    <string name="report_Title">Report Title</string>
    <string name="Reorts">Report Users</string>
    <string name="Reort">Report: </string>
    <string name="Reported">Reported User </string>
    <string name="ReortsReason">Chose Report Reason </string>
    <string name="backtohome">Back to Homepage</string>
    <string name="WelcomeBack">Welcome Back!</string>
    <string name="calc">Calculate Your BMI</string>
    <string name="height">Height (CM)</string>
    <string name="weight">Weight (KG)</string>
    <string name="gender">Gender</string>
    <string name="AdminLogin">Admin Login</string>
    <string name="AdminLoginpage">Administrator Login</string>
    <string name="tell_us_about_your_life">Tell Us About Your Life</string>
    <string name="do_you_have_any_disease">Do you have any disease?</string>
    <string name="do_you_have_any_allergies">Do you have any allergies?</string>
    <string name="nutrient">Nutrient</string>
    <string name="nutrition_centers">Nutrition Centers</string>
    <string name="health_food">Health Food</string>
    <string name="my_information">My Information</string>
    <string name="patient_records">Patient Records</string>
    <string name="my_offers">My Offers</string>
    <string name="records">Records</string>
    <string name="gym_offers">Gym Offers</string>
    <string name="my_activity">My Activity</string>
    <string name="amountpaied">Amount Paid</string>
    <string name="todayat">Today At </string>
    <string name="done">Done </string>
    <string name="cardnum">Card Number</string>
    <string name="entercardnum">Enter Card Number</string>
    <string name="ExpirationDate">Expiration Date</string>
    <string name="SecurityCode">Security Code</string>
    <string name="cvv">CVV</string>
    <string name="payment">Payment</string>
    <string name="centername">Center Name</string>
    <string name="enteramount">Enter Amount </string>
    <string name="amount">20$ </string>
    <string name="recip">Recipient Name </string>
    <string name="book_appointment">Book Appointment Date</string>
    <string name="moneypaied">Money Transfer Is Successful </string>
    <string name="gym_reservation">Gym Reservation</string>
    <string name="online_appointment_link">Online Appointment Link</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="food_list_of_the_week">Food list of the week</string>
    <string name="upload_your_inbody_test_file">Upload your inbody test file</string>
    <string name="health_restaurant_name">Health restaurant name</string>
    <string name="upload_restaurant_license">Upload Restaurant Licence</string>
    <string name="social_media_accounts">Social Media Accounts</string>
    <string name="nutritionist">Nutritionist</string>
    <string name="nutritionist_name">Nutritionist Name</string>
    <string name="upload_nutritionist_license">Upload Nutritionist License</string>
    <string name="we_will_contact_you_soon_after_viewing_your_application">We will contact you soon after viewing your application</string>
    <string name="upload_requaerd_document">Upload Required Documents</string>
    <string name="messages">Messages</string>
    <string name="you_have_appointment_tomorrow_at_5pm">You have appointment tomorrow at 5PM</string>
    <string name="do_you_want_to_know_if_your_body_measure_index_is_healthy_use_our_calculater_and_find_out">Do you want to know if your Body measure index is healthy? use our calculator and find out!</string>
    <string name="calc_your_bmi">TODO</string>
    <string name="calculate_your_bmi">Calculate Your BMI</string>
    <string name="Reportaproblem">Report A problem</string>
    <string name="general">General Information</string>
    <string name="contactinfo">Contact Information</string>
    <string name="avalibaletime">Available Time</string>
    <string name="pricingdetail">Pricing Details</string>
    <string name="sessionprice">Session Price</string>
    <string name="reastuarentname">Restaurant Name</string>
    <string name="pricing_and_avaliability">Pricing and Availability</string>
    <string name="inbody_test">Inbody Test</string>
    <string name="medical_reports">Medical Reports</string>
    <string name="life_style">Life Style</string>
    <string name="diseases">Diseases</string>
    <string name="open">Open</string>
    <string name="patient_name">Patient Name</string>
    <string name="read_only_message">Read-Only Message</string>
    <string name="attachment_message">Attachment Message</string>
    <string name="send2">Send</string>
    <string name="upload_diet_plan">Upload Diet Plan</string>
    <string name="patient_informations">Patient Informations</string>
    <string name="send_message">Send Message</string>
    <string name="upload">Upload</string>
    <string name="resolve">Resolve</string>
    <string name="delete">Delete</string>
    <string name="report_records">Report Records</string>
    <string name="users_records">Users records</string>
    <string name="reviewed_users">Reviewed Users</string>
    <string name="back">Back</string>
    <string name="view_center_license">View Center License</string>
    <string name="view_nutritionist_license">View Nutritionist License</string>
    <string name="view_restaurent_license">View Restaurant License</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="nutritionist_last_name">Nutritionist Last Name</string>
    <string name="how_was_your_session_today">How was your session today ?</string>
    <string name="submit_rating">Submit Rating</string>
    <string name="are_you_a_nutritionist_and_want_to_manage_your_patient_and_meet_them_online_are_you_an_owner_of_a_healthy_food_restaurant_and_want_to_promote_your_business_on_one_of_the_best_health_platforms_in_jordan_join_us_today_you_won_t_regret_it">Are you a nutritionist and want to meet your patient online? Do you own a healthy food restaurant and want to promote your business? Join us today you won’t regret it!</string>
    <string name="restaurant1">Restaurant</string>
    <string name="nutritionist2">Nutritionist</string>
    <string name="patient">Patient</string>
</resources>