<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_bar_item_nutrition_centers"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_food_bank_24"
            android:title="@string/nutrition_centers" />

        <item
            android:id="@+id/nav_bar_item_my_activity"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_food_bank_24"
            android:title="@string/my_activity" />


        <item
            android:id="@+id/nav_bar_item_health_food"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_food_bank_24"
            android:title="@string/health_food" />

        <item
            android:id="@+id/nav_bar_item_myinfo_user"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_food_bank_24"
            android:title="@string/my_information" />
        <item
            android:id="@+id/nav_bar_item_reports"
            android:enabled="true"
            android:icon="@drawable/ic_baseline_food_bank_24"
            android:title="@string/Reorts" />

    </group>
</menu>