<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".screens.SignupUpNutrientsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/toolbar"
            layout="@layout/view_toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/iv_header"
            android:layout_width="386dp"
            android:layout_height="129dp"
            android:src="@drawable/ic_sign_upp_nutrient"
            app:layout_constraintBottom_toTopOf="@id/tv_fill_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tv_fill_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/fill_the_required_information"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toTopOf="@id/til_center_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_header" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_center_name"
            style="@style/genericEditText"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/center_name"
            app:layout_constraintBottom_toTopOf="@id/til_nutrient_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_fill_info">

            <com.google.android.material.textfield.TextInputEditText style="@style/genericMaterialTextInputEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_nutrient_name"
            style="@style/genericEditText"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/nutritionist_name"
            app:layout_constraintBottom_toTopOf="@id/til_country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_center_name">

            <com.google.android.material.textfield.TextInputEditText style="@style/genericMaterialTextInputEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_country"
            style="@style/genericSpinner"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/country"
            app:layout_constraintBottom_toTopOf="@id/til_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_nutrient_name">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/mactv_country"
                style="@style/genericMaterialTextInputEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_city"
            style="@style/genericSpinner"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/city"
            app:layout_constraintBottom_toTopOf="@id/til_exp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_country">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/mactv_city"
                style="@style/genericMaterialTextInputEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_exp"
            style="@style/genericEditText"
            android:layout_marginTop="@dimen/_10sdp"
            android:hint="@string/experience"
            app:layout_constraintBottom_toTopOf="@id/button_upload_center_license"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_city">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/genericMaterialTextInputEditText"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button_upload_center_license"
            style="@style/genericButton"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:backgroundTint="@color/light_green"
            android:text="@string/upload_center_license"
            app:layout_constraintBottom_toTopOf="@id/buttonsignup5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_exp" />


        <Button
            android:id="@+id/button_upload_nutrients_license"
            style="@style/genericButton"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:backgroundTint="@color/light_green"
            android:text="@string/upload_nutritionist_license"
            app:layout_constraintBottom_toTopOf="@id/buttonsignup5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_upload_center_license" />

        <Button
            android:id="@+id/buttonsignup1"
            style="@style/genericButton"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/signup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_upload_nutrients_license"
            tools:enabled="true" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>