<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.SuccessfulMoneyTransferFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/begie">

    <Button
        android:id="@+id/done_payment"
        style="@style/genericButton"
        android:layout_width="279dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="665dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/light_green"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="348dp"
        android:layout_height="439dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rounded_corner_background" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="323dp"
        android:layout_height="245dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="147dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="339dp"
        android:src="@drawable/correctsign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_marginBottom="296dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/moneypaied"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="490dp"
        android:layout_marginEnd="264dp"
        android:layout_marginBottom="222dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/recip"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="516dp"
        android:layout_marginEnd="308dp"
        android:layout_marginBottom="196dp"
        android:text="@string/todayat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="301dp"
        android:layout_marginTop="483dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="203dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/amount"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>